--- a/package.json
+++ b/package.json
@@ -4,17 +4,37 @@
   "description": "### Обзор",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maxmatyugin/mesto.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Max Matyugin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/maxmatyugin/mesto/issues"
   },
-  "homepage": "https://github.com/maxmatyugin/mesto#readme"
+  "homepage": "https://github.com/maxmatyugin/mesto#readme",
+  "dependencies": {
+    "core-js": "^3.8.0",
+    "jquery": "^3.5.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "autoprefixer": "^10.0.4",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
+    "postcss-loader": "^4.1.0",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
