--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "homepage": "https://github.com/maxmatyugin/mesto#readme",
   "dependencies": {
-    "core-js": "^3.8.0",
-    "jquery": "^3.5.1"
+    "core-js": "^3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
